# mailbox

./: .gitignore  CMakeLists.txt  README.md  answer.cpp  answer.h  ideas.txt  letter.cpp  letter.h  protocol.h  protocol.txt  query.cpp  query.h  socket.cpp  socket.h  test.cpp  utils.cpp  utils.h
client/: client_sock.cpp  client_sock.h  interaction.cpp  interaction.h  main.cpp  process_answer.cpp  process_answer.h  read_query.cpp  read_query.h  session.cpp  session.h
client/source/: answer_processor.cpp  answer_processor.h  build_query.cpp  build_query.h  client_sock.cpp  client_sock.h  cycle_outcome_processing.cpp  cycle_outcome_processing.h  interaction.cpp  interaction.h  main.cpp  process_answer.cpp  process_answer.h  query_reader.cpp  query_reader.h  read_query.cpp  read_query.h  session.cpp  session.h
client/test/: main.cpp  test_answer_processor.cpp  test_answer_processor.h  test_build_query.cpp  test_build_query.h  test_cycle_outcome_processing.cpp  test_cycle_outcome_processing.h  test_query_reader.cpp  test_query_reader.h  test_session.cpp  test_session.h
common/source/: answer.cpp  answer.h  date.cpp  date.h  huffman_compression.cpp  huffman_compression.h  letter.cpp  letter.h  protocol.cpp  protocol.h  query.cpp  query.h  socket.cpp  socket.h  utils.cpp  utils.h
common/test/: main.cpp  test_answer.cpp  test_answer.h  test_huffman_compression.cpp  test_letter.cpp  test_letter.h  test_protocol.cpp  test_protocol.h  test_query.cpp  test_socket.cpp  testing_utility.cpp  testing_utility.h  testtools.cpp  testtools.h
general/source/: answer.cpp  answer.h  huffman_compression.cpp  huffman_compression.h  protocol.cpp  protocol.h  protocol.txt  query.cpp  query.h  socket.cpp  socket.h  utils.cpp  utils.h
general/test/: main.cpp  test.cpp  test_answer.cpp  test_huffman_compression.cpp  test_huffman_compression.h  test_protocol.cpp  test_query.cpp  test_query.h  test_socket.cpp  test_socket.h  test_tools.cpp  testtools.h
server/: database.h  interaction.cpp  main.cpp  server.cpp  server.h  server_sock.cpp  server_sock.h
server/source/: database.cpp  database.h  expression_token.cpp  expression_token.h  letter_filter.cpp  letter_filter.h  letter_filter_node.cpp  letter_filter_node.h  letter_filter_parse_tree.cpp  letter_filter_parse_tree.h  letter_filter_token.cpp  letter_filter_token.h  main.cpp  query_processor.cpp  query_processor.h  server.cpp  server.h  server_sock.cpp  server_sock.h
server/test/: main.cpp  test.cpp  test.h  test_database.cpp  test_database.h  test_letter_filter.cpp  test_letter_filter.h  test_query_processor.cpp  test_query_processor.h  test_server.cpp  test_server.h
